restarts the whole thing to follow C# naming conventions

--- a/HyperShift/Client/wwwroot/manifest.json
+++ b/HyperShift/Client/wwwroot/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "hyper-shift",
-  "short_name": "hyper-shift",
+  "name": "HyperShift",
+  "short_name": "HyperShift",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
