--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,7 +18,7 @@ sonar.links.issue=https://github.com/louderzone/neruko-project/issues
 sonar.sources=.
 sonar.language=cs
 #Core C# Settings
-sonar.dotnet.visualstudio.solution.file=neruko-project.sln
+sonar.dotnet.visualstudio.solution.file=NerukoProject.sln
 sonar.dotnet.excludeGeneratedCode=true
 
 # To prevent any issues while analyzing multiple solutions containing projects with similar keys
