--- a/HyperShift/Client/HyperShift.Client.csproj
+++ b/HyperShift/Client/HyperShift.Client.csproj
@@ -4,7 +4,6 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <RazorLangVersion>3.0</RazorLangVersion>
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
-    <AssemblyName>$(AssemblyName.Replace(' ', '_'))</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shared\hyper-shift.Shared.csproj" />
+    <ProjectReference Include="..\Shared\HyperShift.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
