--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,12 @@ steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
 
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'restore'
+    feedsToUse: 'select'
+    vstsFeed: 'e7f129c9-6acc-4287-af29-9b44ef777b34'
+
 - task: SonarCloudPrepare@1
   inputs:
     SonarCloud: 'SonarCloud Neruko Project'
@@ -23,7 +29,14 @@ steps:
     scannerMode: 'MSBuild'
     projectKey: 'lz.neruko'
     projectName: 'Neruko Project'
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'build'
+    arguments: '--configuration $(buildConfiguration)'
+
 - task: SonarCloudAnalyze@1
+
 - task: SonarCloudPublish@1
   inputs:
     pollingTimeoutSec: '300'
