--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ variables:
 
 steps:
 - script: dotnet restore
+  displayName: 'dotnet restore'
 
 - task: SonarCloudPrepare@1
   displayName: 'Prepare for Sonar Analysis'
