Just publish as Drop as see what happens........

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,5 +42,5 @@ steps:
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: '_neruko-project'
+    ArtifactName: 'Drop'
     publishLocation: 'Container'
