--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,11 +36,19 @@ steps:
   inputs:
     pollingTimeoutSec: '300'
 
-- script: dotnet publish --configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)
-  displayName: 'dotnet publish $(buildConfiguration)'
+- task: UseDotNet@2
+  inputs:
+    packageType: 'sdk'
+    version: '3.1.x'
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'publish'
+    publishWebProjects: true
+    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
 
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'Drop'
+    ArtifactName: 'neruko-core'
     publishLocation: 'Container'
