--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,13 +37,17 @@ steps:
     pollingTimeoutSec: '300'
 
 - task: UseDotNet@2
+  displayName: 'Update .NET Core SDK'
   inputs:
     packageType: 'sdk'
     version: '3.1.x'
 
 - task: DotNetCoreCLI@2
+  displayName: 'dotnet publish'
   inputs:
     command: 'publish'
+    projects: '**/Server/**/*.csproj'
+    publishWebProjects: false
     arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
     zipAfterPublish: true
 
