adds continuous deployment to the project
* creates auto publish artifacts

* Just publish as Drop as see what happens........

* seems like we must use the the dotnetCLI task...

* deploy the whole thing instead of just the web app

* publish the server project instead of the client project

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,3 +35,24 @@ steps:
   displayName: 'Publish Sonar analyze results'
   inputs:
     pollingTimeoutSec: '300'
+
+- task: UseDotNet@2
+  displayName: 'Update .NET Core SDK'
+  inputs:
+    packageType: 'sdk'
+    version: '3.1.x'
+
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet publish'
+  inputs:
+    command: 'publish'
+    projects: '**/Server/**/*.csproj'
+    publishWebProjects: false
+    arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+    zipAfterPublish: true
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'neruko-core'
+    publishLocation: 'Container'
