--- a/Neruko/Server/Neruko.Server.csproj
+++ b/Neruko/Server/Neruko.Server.csproj
@@ -1,18 +1,15 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>5a0d09ce-8eec-48ad-bee6-8867208ffa9f</UserSecretsId>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="DSharpPlus" Version="3.2.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="3.2.0" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Client\Neruko.Client.csproj" />
     <ProjectReference Include="..\Shared\Neruko.Shared.csproj" />
   </ItemGroup>
-
-
 </Project>
