--- a/Neruko/Server/Neruko.Server.csproj
+++ b/Neruko/Server/Neruko.Server.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="DryIoc.Microsoft.DependencyInjection" Version="4.0.0" />
     <PackageReference Include="DSharpPlus" Version="3.2.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="3.2.0" />
+    <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Client\Neruko.Client.csproj" />
