--- a/Neruko/Server/Neruko.Server.csproj
+++ b/Neruko/Server/Neruko.Server.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="DryIoc.Microsoft.DependencyInjection" Version="4.0.0" />
     <PackageReference Include="DSharpPlus" Version="3.2.3" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="3.2.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="3.2.1" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
