--- a/Neruko/Server/Neruko.Server.csproj
+++ b/Neruko/Server/Neruko.Server.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Discord.OAuth2" Version="2.0.0" />
     <PackageReference Include="DryIoc.Microsoft.DependencyInjection" Version="4.0.0" />
     <PackageReference Include="DSharpPlus" Version="3.2.3" />
     <PackageReference Include="DSharpPlus.CommandsNext" Version="3.2.3" />
