--- a/Neruko/Client/Properties/launchSettings.json
+++ b/Neruko/Client/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:7609",
-      "sslPort": 44324
+      "applicationUrl": "http://localhost:31872",
+      "sslPort": 44347
     }
   },
   "profiles": {
@@ -18,6 +18,7 @@
     },
     "Neruko": {
       "commandName": "Project",
+      "dotnetRunMessages": "true",
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
