--- a/Neruko/Server/appsettings.json
+++ b/Neruko/Server/appsettings.json
@@ -1,10 +1,20 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Neruko.Server-B1B215BC-0F01-4D90-A045-3611B2761B71;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "IdentityServer": {
+    "Clients": {
+      "Neruko.Client": {
+        "Profile": "IdentityServerSPA"
       }
-    },
+    }
+  },
 "AllowedHosts": "*"
 }
